Updated test change forms to include submit row at the top and collapsable fieldsets for testing

--- a/test_pages/changeform.html
+++ b/test_pages/changeform.html
@@ -91,6 +91,13 @@
 
 
 
+<div class="submit-row">
+<input type="submit" value="Save" class="default" name="_save" />
+<p class="deletelink-box"><a href="delete/" class="deletelink">Delete</a></p>
+
+<input type="submit" value="Save and add another" name="_addanother"  />
+<input type="submit" value="Save and continue editing" name="_continue" />
+</div>
 
 
   <fieldset class="module aligned ">
