--- a/test_pages/change_form_success.html
+++ b/test_pages/change_form_success.html
@@ -513,7 +513,7 @@
 </fieldset>
 
 
-  <fieldset class="module aligned ">
+  <fieldset class="module aligned collapse collapsed">
     <h2>Related Fields</h2>
 
 
