--- a/test_pages/change_form_success.html
+++ b/test_pages/change_form_success.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="../admintheme/static/admin/js/SelectBox.js"></script>
 <script type="text/javascript" src="../admintheme/static/admin/js/SelectFilter2.js"></script>
 <script type="text/javascript" src="../admintheme/static/admin/js/collapse.js"></script>
+<script type="text/javascript" src="../admintheme/static/admin/js/inlines.js"></script>
 
 <meta name="robots" content="NONE,NOARCHIVE" />
 </head>
@@ -628,6 +629,583 @@
 
 
 
+
+<div class="inline-group" id="tabularmodel_set-group">
+  <div class="tabular inline-related ">
+<input type="hidden" name="tabularmodel_set-TOTAL_FORMS" value="6" id="id_tabularmodel_set-TOTAL_FORMS" /><input type="hidden" name="tabularmodel_set-INITIAL_FORMS" value="3" id="id_tabularmodel_set-INITIAL_FORMS" /><input type="hidden" name="tabularmodel_set-MAX_NUM_FORMS" id="id_tabularmodel_set-MAX_NUM_FORMS" />
+<fieldset class="module">
+   <h2>Tabular models</h2>
+
+   <table>
+     <thead><tr>
+
+
+         <th colspan="2" class="required">Name
+
+         </th>
+
+
+     <th>Delete?</th>
+     </tr></thead>
+
+     <tbody>
+
+
+        <tr class="form-row row1 has_original"
+             id="tabularmodel_set-0">
+        <td class="original">
+          <p>
+           Jimmy
+
+            </p>
+          <input type="hidden" name="tabularmodel_set-0-id" value="1" id="id_tabularmodel_set-0-id" />
+          <input type="hidden" name="tabularmodel_set-0-parent" value="1" id="id_tabularmodel_set-0-parent" />
+
+        </td>
+
+
+
+              <td class="field-name">
+
+
+                  <input name="tabularmodel_set-0-name" value="Jimmy" class="vTextField" maxlength="255" type="text" id="id_tabularmodel_set-0-name" />
+
+              </td>
+
+
+
+
+          <td class="delete"><input type="checkbox" name="tabularmodel_set-0-DELETE" id="id_tabularmodel_set-0-DELETE" /></td>
+
+        </tr>
+
+
+        <tr class="form-row row2 has_original"
+             id="tabularmodel_set-1">
+        <td class="original">
+          <p>
+           Joe
+
+            </p>
+          <input type="hidden" name="tabularmodel_set-1-id" value="2" id="id_tabularmodel_set-1-id" />
+          <input type="hidden" name="tabularmodel_set-1-parent" value="1" id="id_tabularmodel_set-1-parent" />
+
+        </td>
+
+
+
+              <td class="field-name">
+
+
+                  <input name="tabularmodel_set-1-name" value="Joe" class="vTextField" maxlength="255" type="text" id="id_tabularmodel_set-1-name" />
+
+              </td>
+
+
+
+
+          <td class="delete"><input type="checkbox" name="tabularmodel_set-1-DELETE" id="id_tabularmodel_set-1-DELETE" /></td>
+
+        </tr>
+
+
+        <tr class="form-row row1 has_original"
+             id="tabularmodel_set-2">
+        <td class="original">
+          <p>
+           Sandy
+
+            </p>
+          <input type="hidden" name="tabularmodel_set-2-id" value="3" id="id_tabularmodel_set-2-id" />
+          <input type="hidden" name="tabularmodel_set-2-parent" value="1" id="id_tabularmodel_set-2-parent" />
+
+        </td>
+
+
+
+              <td class="field-name">
+
+
+                  <input name="tabularmodel_set-2-name" value="Sandy" class="vTextField" maxlength="255" type="text" id="id_tabularmodel_set-2-name" />
+
+              </td>
+
+
+
+
+          <td class="delete"><input type="checkbox" name="tabularmodel_set-2-DELETE" id="id_tabularmodel_set-2-DELETE" /></td>
+
+        </tr>
+
+
+        <tr class="form-row row2 "
+             id="tabularmodel_set-3">
+        <td class="original">
+
+          <input type="hidden" name="tabularmodel_set-3-id" id="id_tabularmodel_set-3-id" />
+          <input type="hidden" name="tabularmodel_set-3-parent" value="1" id="id_tabularmodel_set-3-parent" />
+
+        </td>
+
+
+
+              <td class="field-name">
+
+
+                  <input id="id_tabularmodel_set-3-name" type="text" class="vTextField" name="tabularmodel_set-3-name" maxlength="255" />
+
+              </td>
+
+
+
+
+          <td class="delete"></td>
+
+        </tr>
+
+
+        <tr class="form-row row1 "
+             id="tabularmodel_set-4">
+        <td class="original">
+
+          <input type="hidden" name="tabularmodel_set-4-id" id="id_tabularmodel_set-4-id" />
+          <input type="hidden" name="tabularmodel_set-4-parent" value="1" id="id_tabularmodel_set-4-parent" />
+
+        </td>
+
+
+
+              <td class="field-name">
+
+
+                  <input id="id_tabularmodel_set-4-name" type="text" class="vTextField" name="tabularmodel_set-4-name" maxlength="255" />
+
+              </td>
+
+
+
+
+          <td class="delete"></td>
+
+        </tr>
+
+
+        <tr class="form-row row2 "
+             id="tabularmodel_set-5">
+        <td class="original">
+
+          <input type="hidden" name="tabularmodel_set-5-id" id="id_tabularmodel_set-5-id" />
+          <input type="hidden" name="tabularmodel_set-5-parent" value="1" id="id_tabularmodel_set-5-parent" />
+
+        </td>
+
+
+
+              <td class="field-name">
+
+
+                  <input id="id_tabularmodel_set-5-name" type="text" class="vTextField" name="tabularmodel_set-5-name" maxlength="255" />
+
+              </td>
+
+
+
+
+          <td class="delete"></td>
+
+        </tr>
+
+
+        <tr class="form-row row1  empty-form"
+             id="tabularmodel_set-empty">
+        <td class="original">
+
+          <input type="hidden" name="tabularmodel_set-__prefix__-id" id="id_tabularmodel_set-__prefix__-id" />
+          <input type="hidden" name="tabularmodel_set-__prefix__-parent" value="1" id="id_tabularmodel_set-__prefix__-parent" />
+
+        </td>
+
+
+
+              <td class="field-name">
+
+
+                  <input id="id_tabularmodel_set-__prefix__-name" type="text" class="vTextField" name="tabularmodel_set-__prefix__-name" maxlength="255" />
+
+              </td>
+
+
+
+
+          <td class="delete"></td>
+
+        </tr>
+
+     </tbody>
+   </table>
+</fieldset>
+  </div>
+</div>
+
+<script type="text/javascript">
+(function($) {
+    $(document).ready(function($) {
+        var rows = "#tabularmodel_set-group .tabular.inline-related tbody tr";
+        var alternatingRows = function(row) {
+            $(rows).not(".add-row").removeClass("row1 row2")
+                .filter(":even").addClass("row1").end()
+                .filter(rows + ":odd").addClass("row2");
+        }
+        var reinitDateTimeShortCuts = function() {
+            // Reinitialize the calendar and clock widgets by force
+            if (typeof DateTimeShortcuts != "undefined") {
+                $(".datetimeshortcuts").remove();
+                DateTimeShortcuts.init();
+            }
+        }
+        var updateSelectFilter = function() {
+            // If any SelectFilter widgets are a part of the new form,
+            // instantiate a new SelectFilter instance for it.
+            if (typeof SelectFilter != "undefined"){
+                $(".selectfilter").each(function(index, value){
+                  var namearr = value.name.split('-');
+                  SelectFilter.init(value.id, namearr[namearr.length-1], false, "/static/admin/");
+                });
+                $(".selectfilterstacked").each(function(index, value){
+                  var namearr = value.name.split('-');
+                  SelectFilter.init(value.id, namearr[namearr.length-1], true, "/static/admin/");
+                });
+            }
+        }
+        var initPrepopulatedFields = function(row) {
+            row.find('.prepopulated_field').each(function() {
+                var field = $(this);
+                var input = field.find('input, select, textarea');
+                var dependency_list = input.data('dependency_list') || [];
+                var dependencies = [];
+                $.each(dependency_list, function(i, field_name) {
+                  dependencies.push('#' + row.find('.field-' + field_name).find('input, select, textarea').attr('id'));
+                });
+                if (dependencies.length) {
+                    input.prepopulate(dependencies, input.attr('maxlength'));
+                }
+            });
+        }
+        $(rows).formset({
+            prefix: "tabularmodel_set",
+            addText: "Add another Tabular Model",
+            formCssClass: "dynamic-tabularmodel_set",
+            deleteCssClass: "inline-deletelink",
+            deleteText: "Remove",
+            emptyCssClass: "empty-form",
+            removed: alternatingRows,
+            added: (function(row) {
+                initPrepopulatedFields(row);
+                reinitDateTimeShortCuts();
+                updateSelectFilter();
+                alternatingRows(row);
+            })
+        });
+    });
+})(django.jQuery);
+</script>
+
+
+
+<div class="inline-group" id="stackedmodel_set-group">
+  <h2>Stacked Models</h2>
+<input type="hidden" name="stackedmodel_set-TOTAL_FORMS" value="6" id="id_stackedmodel_set-TOTAL_FORMS" /><input type="hidden" name="stackedmodel_set-INITIAL_FORMS" value="3" id="id_stackedmodel_set-INITIAL_FORMS" /><input type="hidden" name="stackedmodel_set-MAX_NUM_FORMS" id="id_stackedmodel_set-MAX_NUM_FORMS" />
+
+
+<div class="inline-related" id="stackedmodel_set-0">
+  <h3><b>Stacked Model:</b>&nbsp;<span class="inline_label">James</span>
+
+    <span class="delete"><input type="checkbox" name="stackedmodel_set-0-DELETE" id="id_stackedmodel_set-0-DELETE" /> <label for="id_stackedmodel_set-0-DELETE" class="vCheckboxLabel inline">Delete</label></span>
+  </h3>
+
+
+    <fieldset class="module aligned ">
+
+
+
+        <div class="form-row field-name">
+
+
+                <div>
+
+
+                        <label for="id_stackedmodel_set-0-name" class="required">Name:</label>
+
+                            <input name="stackedmodel_set-0-name" value="James" class="vTextField" maxlength="255" type="text" id="id_stackedmodel_set-0-name" />
+
+
+
+                </div>
+
+        </div>
+
+</fieldset>
+
+
+  <input type="hidden" name="stackedmodel_set-0-id" value="1" id="id_stackedmodel_set-0-id" />
+  <input type="hidden" name="stackedmodel_set-0-parent" value="1" id="id_stackedmodel_set-0-parent" />
+</div><div class="inline-related" id="stackedmodel_set-1">
+  <h3><b>Stacked Model:</b>&nbsp;<span class="inline_label">Joseph</span>
+
+    <span class="delete"><input type="checkbox" name="stackedmodel_set-1-DELETE" id="id_stackedmodel_set-1-DELETE" /> <label for="id_stackedmodel_set-1-DELETE" class="vCheckboxLabel inline">Delete</label></span>
+  </h3>
+
+
+    <fieldset class="module aligned ">
+
+
+
+        <div class="form-row field-name">
+
+
+                <div>
+
+
+                        <label for="id_stackedmodel_set-1-name" class="required">Name:</label>
+
+                            <input name="stackedmodel_set-1-name" value="Joseph" class="vTextField" maxlength="255" type="text" id="id_stackedmodel_set-1-name" />
+
+
+
+                </div>
+
+        </div>
+
+</fieldset>
+
+
+  <input type="hidden" name="stackedmodel_set-1-id" value="2" id="id_stackedmodel_set-1-id" />
+  <input type="hidden" name="stackedmodel_set-1-parent" value="1" id="id_stackedmodel_set-1-parent" />
+</div><div class="inline-related" id="stackedmodel_set-2">
+  <h3><b>Stacked Model:</b>&nbsp;<span class="inline_label">Sandra</span>
+
+    <span class="delete"><input type="checkbox" name="stackedmodel_set-2-DELETE" id="id_stackedmodel_set-2-DELETE" /> <label for="id_stackedmodel_set-2-DELETE" class="vCheckboxLabel inline">Delete</label></span>
+  </h3>
+
+
+    <fieldset class="module aligned ">
+
+
+
+        <div class="form-row field-name">
+
+
+                <div>
+
+
+                        <label for="id_stackedmodel_set-2-name" class="required">Name:</label>
+
+                            <input name="stackedmodel_set-2-name" value="Sandra" class="vTextField" maxlength="255" type="text" id="id_stackedmodel_set-2-name" />
+
+
+
+                </div>
+
+        </div>
+
+</fieldset>
+
+
+  <input type="hidden" name="stackedmodel_set-2-id" value="3" id="id_stackedmodel_set-2-id" />
+  <input type="hidden" name="stackedmodel_set-2-parent" value="1" id="id_stackedmodel_set-2-parent" />
+</div><div class="inline-related" id="stackedmodel_set-3">
+  <h3><b>Stacked Model:</b>&nbsp;<span class="inline_label">#4</span>
+
+
+  </h3>
+
+
+    <fieldset class="module aligned ">
+
+
+
+        <div class="form-row field-name">
+
+
+                <div>
+
+
+                        <label for="id_stackedmodel_set-3-name" class="required">Name:</label>
+
+                            <input id="id_stackedmodel_set-3-name" type="text" class="vTextField" name="stackedmodel_set-3-name" maxlength="255" />
+
+
+
+                </div>
+
+        </div>
+
+</fieldset>
+
+
+  <input type="hidden" name="stackedmodel_set-3-id" id="id_stackedmodel_set-3-id" />
+  <input type="hidden" name="stackedmodel_set-3-parent" value="1" id="id_stackedmodel_set-3-parent" />
+</div><div class="inline-related" id="stackedmodel_set-4">
+  <h3><b>Stacked Model:</b>&nbsp;<span class="inline_label">#5</span>
+
+
+  </h3>
+
+
+    <fieldset class="module aligned ">
+
+
+
+        <div class="form-row field-name">
+
+
+                <div>
+
+
+                        <label for="id_stackedmodel_set-4-name" class="required">Name:</label>
+
+                            <input id="id_stackedmodel_set-4-name" type="text" class="vTextField" name="stackedmodel_set-4-name" maxlength="255" />
+
+
+
+                </div>
+
+        </div>
+
+</fieldset>
+
+
+  <input type="hidden" name="stackedmodel_set-4-id" id="id_stackedmodel_set-4-id" />
+  <input type="hidden" name="stackedmodel_set-4-parent" value="1" id="id_stackedmodel_set-4-parent" />
+</div><div class="inline-related" id="stackedmodel_set-5">
+  <h3><b>Stacked Model:</b>&nbsp;<span class="inline_label">#6</span>
+
+
+  </h3>
+
+
+    <fieldset class="module aligned ">
+
+
+
+        <div class="form-row field-name">
+
+
+                <div>
+
+
+                        <label for="id_stackedmodel_set-5-name" class="required">Name:</label>
+
+                            <input id="id_stackedmodel_set-5-name" type="text" class="vTextField" name="stackedmodel_set-5-name" maxlength="255" />
+
+
+
+                </div>
+
+        </div>
+
+</fieldset>
+
+
+  <input type="hidden" name="stackedmodel_set-5-id" id="id_stackedmodel_set-5-id" />
+  <input type="hidden" name="stackedmodel_set-5-parent" value="1" id="id_stackedmodel_set-5-parent" />
+</div><div class="inline-related empty-form last-related" id="stackedmodel_set-empty">
+  <h3><b>Stacked Model:</b>&nbsp;<span class="inline_label">#7</span>
+
+
+  </h3>
+
+
+    <fieldset class="module aligned ">
+
+
+
+        <div class="form-row field-name">
+
+
+                <div>
+
+
+                        <label for="id_stackedmodel_set-__prefix__-name" class="required">Name:</label>
+
+                            <input id="id_stackedmodel_set-__prefix__-name" type="text" class="vTextField" name="stackedmodel_set-__prefix__-name" maxlength="255" />
+
+
+
+                </div>
+
+        </div>
+
+</fieldset>
+
+
+  <input type="hidden" name="stackedmodel_set-__prefix__-id" id="id_stackedmodel_set-__prefix__-id" />
+  <input type="hidden" name="stackedmodel_set-__prefix__-parent" value="1" id="id_stackedmodel_set-__prefix__-parent" />
+</div>
+</div>
+
+<script type="text/javascript">
+(function($) {
+    $(document).ready(function() {
+        var rows = "#stackedmodel_set-group .inline-related";
+        var updateInlineLabel = function(row) {
+            $(rows).find(".inline_label").each(function(i) {
+                var count = i + 1;
+                $(this).html($(this).html().replace(/(#\d+)/g, "#" + count));
+            });
+        };
+        var reinitDateTimeShortCuts = function() {
+            // Reinitialize the calendar and clock widgets by force, yuck.
+            if (typeof DateTimeShortcuts != "undefined") {
+                $(".datetimeshortcuts").remove();
+                DateTimeShortcuts.init();
+            }
+        };
+        var updateSelectFilter = function() {
+            // If any SelectFilter widgets were added, instantiate a new instance.
+            if (typeof SelectFilter != "undefined"){
+                $(".selectfilter").each(function(index, value){
+                  var namearr = value.name.split('-');
+                  SelectFilter.init(value.id, namearr[namearr.length-1], false, "/static/admin/");
+                });
+                $(".selectfilterstacked").each(function(index, value){
+                  var namearr = value.name.split('-');
+                  SelectFilter.init(value.id, namearr[namearr.length-1], true, "/static/admin/");
+                });
+            }
+        };
+        var initPrepopulatedFields = function(row) {
+            row.find('.prepopulated_field').each(function() {
+                var field = $(this);
+                var input = field.find('input, select, textarea');
+                var dependency_list = input.data('dependency_list') || [];
+                var dependencies = [];
+                $.each(dependency_list, function(i, field_name) {
+                  dependencies.push('#' + row.find('.form-row .field-' + field_name).find('input, select, textarea').attr('id'));
+                });
+                if (dependencies.length) {
+                    input.prepopulate(dependencies, input.attr('maxlength'));
+                }
+            });
+        };
+        $(rows).formset({
+            prefix: "stackedmodel_set",
+            addText: "Add another Stacked Model",
+            formCssClass: "dynamic-stackedmodel_set",
+            deleteCssClass: "inline-deletelink",
+            deleteText: "Remove",
+            emptyCssClass: "empty-form",
+            removed: updateInlineLabel,
+            added: (function(row) {
+                initPrepopulatedFields(row);
+                reinitDateTimeShortCuts();
+                updateSelectFilter();
+                updateInlineLabel(row);
+            })
+        });
+    });
+})(django.jQuery);
+</script>
 
 
 
